--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
+    "@sweetalert2/theme-dark": "^5.0.15",
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.4",
-    "sweetalert2": "^11.7.12"
+    "sweetalert2": "^11.7.16"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
